fix z-index for table row headera

--- a/src/abstracts/_tables.scss
+++ b/src/abstracts/_tables.scss
@@ -17,7 +17,7 @@
     border-bottom: 2px solid $smokeDarkest;
     margin-bottom: 24px;
     width: 100%;
-    z-index: 10;
+    z-index: 8;
 
     &-item {
       @include labelSmall;
